# homelab

./: .ansible-lint  .cfnlintrc  .coderabbit.yaml  .cspell.json  .gitignore  .mise.toml  .pre-commit-config.yaml  .yamlfmt.yaml  .yamllint  .yamllint.yaml  AGENTS.md  CHANGELOG.md  RAID.md  README.md  TODO.md  Taskfile.yaml  biome.json  cdk.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json
.cspell-dictionaries/: ansible.txt  aws.txt  homelab.txt  k8s.txt  linux.txt  local.txt  runway.txt  terraform.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json5
.github/renovate/: custom-managers.json5  customManagers.json5  customVersioning.json5
.github/workflows/: ansible-scheduled.yaml  ansible.yaml  biome.yaml  cdk.yaml  dns.yaml  kustomize.yaml  spellcheck.yaml  ssl.yaml
.taskfiles/ansible/: Taskfile.yaml
.taskfiles/argocd/: Taskfile.yaml
.taskfiles/cdk/: Taskfile.yaml
.taskfiles/pulumi/: Taskfile.yaml
ansible/: ansible.cfg  galaxy.yaml  handlers.yaml  homelab.yaml  hosts  localhost_playbook.yaml
ansible/group_vars/: all  all.yaml  dev_k8s_cluster  dev_k8s_cluster.yaml  headscale.yaml  prod_k8s_cluster  prod_k8s_cluster.yaml
ansible/host_vars/: storage-0001.stoneydavis.local  weasel.stoneydavis.com
ansible/roles/_k3s_prereq/files/: dhcp_all_network_interfaces
ansible/roles/_k3s_prereq/tasks/: main.yml
ansible/roles/certbot/tasks/: main.yaml
ansible/roles/common/: README.md
ansible/roles/faerun-public/: README.md  main.yml
ansible/roles/livekit/: README.md
cdk/: cdk.json  package.json  pnpm-lock.yaml
cdk/lib/stacks/: githubOIDC.ts
kubernetes/main/appsets/: demo.yaml  demo.yaml.disabled  selfhosted.yaml  system.yaml
kubernetes/main/bootstrap/: appset.yaml  appsets.yaml  argocd.yaml
kubernetes/main/system/: appset.yaml
lib/stacks/: githubOIDC.ts
lib/stacks/letsEncrypt/: index.ts
lib/stacks/letsEncrypt/functions/refresh-cert/: index.py  local-index.py  pyproject.toml
pulumi/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  main.py  pyproject.toml
pulumi/stacks/: home_assistant.py  weasel.py
scripts/: dependency_graph.py  kubesec-validate.sh  setup-tunnel.sh
(+699 files in other folders)
