[project]
authors = [
    { name = "Craig Davis", email = "11911367+blade2005@users.noreply.github.com" },
]
requires-python = "<4.0.0,>=3.13.0"
dependencies = [
    "ansible<12.0.0,>=11.0.0",
    "kubernetes<32.0.2,>=32.0.1",
    "boto3<2.0.0,>=1.34.143",
]
name = "homelab"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "ansible-lint<26.0.0,>=25.0.0; platform_system != \"Windows\"",
    "commitizen==4.7.0",
    "pre-commit<5.0.0,>=4.0.1",
]
